Updated dependencies for Firestore and Firebase Auth